--- a/src/rateNreview/reviewV2.css
+++ b/src/rateNreview/reviewV2.css
@@ -1,16 +1,29 @@
-.review-container{
+.r-container{
     background-color:rgb(228, 228, 228);
     color: #730000;
     padding: 10px;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow-y: auto; /* Enable scrolling if content exceeds screen height */
+    box-sizing: border-box;
+    overflow-y: hidden;
+    z-index: 1000;
 }
 
 .backbut{
+    font-size: 20px;
     color: #730000;
     text-align: left;
     padding: 10px;
 }
 
 .dropdown{
+    top: 25%;
     width: 100%;
     text-align: right;
     position: absolute;
@@ -24,12 +37,17 @@
     color: #730000;
 }
 
+.list-review li{
+    margin-top: 20px;
+}
+
 .list-review{
     position: absolute;
-    top: 30%;
+    top: 25%;
     color: #730000;
     width: 100%;
     text-align: left;
     padding: 10px;
     font-size: 20px;
+    margin-top: 10px;
 }
