--- a/src/rateNreview/reviewV2.css
+++ b/src/rateNreview/reviewV2.css
@@ -38,16 +38,19 @@
 }
 
 .list-review li{
+    padding: 10px;
+    width: 335px;
     margin-top: 20px;
+    background-color: rgb(172, 165, 165);
 }
 
 .list-review{
+    
     position: absolute;
     top: 25%;
     color: #730000;
     width: 100%;
     text-align: left;
-    padding: 10px;
     font-size: 20px;
     margin-top: 10px;
 }
