--- a/src/buildings/building.css
+++ b/src/buildings/building.css
@@ -5,12 +5,11 @@
 
 .image-container{
     display: block;
-    position: relative;
     overflow: hidden;
     width: 100%;
     height: 100%;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     text-align: center;
 }
 
@@ -21,21 +20,41 @@
     align-items: center;
     padding: 10px;
     width: 100%;
-    top: 5.2em;
+    top: 5.4em;
 }
 
 .gif{
-    width: 100%;
     position: relative;
+    width: 100%;
+    
 }
 
 .gif img{
     position: relative;
-    width: 45vh;
-    height: fit-content;
-    padding: 5px;
-    top: 5em;    
+    width: 100vw;
+    height: max-content;
+    padding: 15px;
+    top: 5em;
+  }
+
+.image-button-grid{
+  position: relative;
+  width: 100%;
+  align-items: center;
 }
+
+@media screen and (min-width: 768px) {
+  .image-button-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .image-button-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
 
 .back-button{
     display: flex;
@@ -70,23 +89,6 @@ height: 100%;
     padding-bottom: 50px;
 }
 
-/* Add these styles to your existing CSS file, e.g., 'building.css' */
-.image-grid {
-  width: 100%;
-  display: grid;
-  justify-content: center;
-  position: relative;
-  height: 100%;
-  padding: 5px;
-}
-
-.image-grid img {
-  max-width: 150px;
-  max-height: 150px;
-  cursor: pointer;
-}
-
-
 .image-text p {
   align-items: center;
   justify-content: center;
@@ -99,21 +101,6 @@ height: 100%;
   padding: 1px;
 
 }
-/* Add the rest of your styles as they are */
-/* Desktop styles - 3 columns */
-@media screen and (min-width: 768px) {
-  .image-grid {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-
-/* Mobile styles - 2 columns */
-@media screen and (max-width: 767px) {
-  .image-grid {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
 
 .title-area p{
   text-align:center;
@@ -266,7 +253,6 @@ height: 100%;
   }
 
   .map-img img {
-    position: relative;
     width: 100%;
     height: 100%;
     border: none;
