--- a/src/rateNreview/rate.css
+++ b/src/rateNreview/rate.css
@@ -3,48 +3,53 @@
     background-color: rgba(0, 0, 0, 0.5);
 }
 
+.overlay-container{
+    width: 100%;
+    height: 100%;
+}
+
 .rate-popup {
     color: white;
     position: fixed;
-    top: 15%;
-    left: 50%;
+    top: 13%;
     transform: translate(-50%, -50%);
-    width: 370px; 
+    width: 100%; 
     background-color: transparent;
     display: flex;
-    justify-content: center;
-    align-items: center;
     z-index: 1000;
+    padding: 10px;
+    align-items: center;
+    justify-content: center;
+    
 }
 
 .rate-content {
     background-color: transparent;
-    padding: 20px;
     position: relative;
     border-radius: 10px;
-    max-width: 400px;
-    max-height: 300px;
     overflow-y: auto;
+    width: 320px;
+
 }
 
 .gif-container {
     text-align: center;
+    align-items: center;
+    justify-content: center;
 }
   
 .gif {
-    max-width: 80%;
+    max-width: 200px;
     height: auto;
 }
 
 .rate-container {
     position: fixed;
-    left: 0;
-    /*transform: translate(-50%, -50%);*/
     background-color: #730000;
     padding: 15px;
     border-radius: 10px;
-    width: 370px;
-    height: 520px;
+    width: 320px;
+    max-height: 530px;
     z-index: 1000;
     font-family: "Poppins", sans-serif;
 }
