--- a/src/welcome/welcome.css
+++ b/src/welcome/welcome.css
@@ -16,7 +16,7 @@
     align-items: center;
     justify-content: center;
     display: flex;
-    top: 0;
+    top: -3%;
     width: 100%;
     height: 280px;
     padding: 30px;
@@ -30,7 +30,7 @@
   .welcome-container {
     position: fixed;
     width: 100%;
-    height: 70%;
+    height: 68%;
     background-color:#730000;
     bottom: 0;
     padding: 20px;
